# aipy

./: .gitignore  README.md  aipy.py  docker-compose.cpu.yaml  docker-compose.gpu.yaml  pyproject.toml
