[project]
name = "aipy"
version = "2.16.2"
description = "ollama's support tools"
authors = [{ name = "Douglas Panhota", email = "douglaspands@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = []

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
